refactor: java.nio를 java.io로 변환
nio를 제거하면서 readAllBytes를 안 쓰고 byte 배열로 파일을 읽는 메소드를 새로 작성하였다. 그리고 probeContentType 메소드 대신 ContentType enum을 통해 파일의 확장자를 읽은 다음, 미리 정한 확장자에 대해 Content-Type을 정하도록 하였다. 변경한 부분에 맞춰 테스트도 수정하였다.